✨feature: swagger docs added into state
