# pkg/utils/json_response.go
@@ -4,11 +4,17 @@ import (
 	"math"
 )
 
-func GenerateListResponse(dbResult any, itemsCount, pageSize, currentPage int) map[string]any {
+type PaginatedResponse struct {
+	PageCount   int `json:"page_count"`
+	CurrentPage int `json:"current_page"`
+	Result      any `json:"result"`
+}
+
+func GenerateListResponse(dbResult any, itemsCount, pageSize, currentPage int) PaginatedResponse {
 	pageCount := int(math.Ceil(float64(itemsCount) / float64(pageSize)))
-	return map[string]any{
-		"page_count":   pageCount,
-		"current_page": currentPage,
-		"result":       dbResult,
+	return PaginatedResponse{
+		PageCount:   pageCount,
+		CurrentPage: itemsCount,
+		Result:      dbResult,
 	}
 }
